--- a/IndustriaArcanumModpack/config/Waila.cfg
+++ b/IndustriaArcanumModpack/config/Waila.cfg
@@ -28,6 +28,19 @@ general {
 ##########################################################################################################
 
 modules {
+    B:Railcraft=true
+    B:"Railcraft:charge"=true
+    B:"Railcraft:energy"=true
+    B:"Railcraft:engines"=true
+    B:"Railcraft:heat"=true
+    B:"Railcraft:locomotives"=true
+    B:"Railcraft:multiblocks"=true
+    B:"Railcraft:tanks"=true
+    B:Steamcraft=true
+    B:"Steamcraft:crucible"=true
+    B:"Steamcraft:gauge"=true
+    B:"Steamcraft:tank"=true
+    B:"Steamcraft:valve"=true
     B:bb.itemnumb=true
     B:bb.itemtype=true
     B:bb.space=true
@@ -54,6 +67,7 @@ modules {
     B:harvestability.unharvestableonly=false
     B:magicalcrops=true
     B:"magicalcrops:showHover"=true
+    B:railcraft.fluidamount=true
     B:tcon.basin=true
     B:tcon.castingchannel=true
     B:tcon.searedtank=true
@@ -122,6 +136,19 @@ modules {
 ##########################################################################################################
 
 server_forcing {
+    B:Railcraft=false
+    B:"Railcraft:charge"=false
+    B:"Railcraft:energy"=false
+    B:"Railcraft:engines"=false
+    B:"Railcraft:heat"=false
+    B:"Railcraft:locomotives"=false
+    B:"Railcraft:multiblocks"=false
+    B:"Railcraft:tanks"=false
+    B:Steamcraft=false
+    B:"Steamcraft:crucible"=false
+    B:"Steamcraft:gauge"=false
+    B:"Steamcraft:tank"=false
+    B:"Steamcraft:valve"=false
     B:bb.itemnumb=false
     B:bb.itemtype=false
     B:bb.space=false
@@ -148,6 +175,7 @@ server_forcing {
     B:harvestability.unharvestableonly=false
     B:magicalcrops=false
     B:"magicalcrops:showHover"=false
+    B:railcraft.fluidamount=false
     B:tcon.basin=false
     B:tcon.castingchannel=false
     B:tcon.searedtank=false
