--- a/IndustriaArcanumModpack/config/wailaplugins.cfg
+++ b/IndustriaArcanumModpack/config/wailaplugins.cfg
@@ -18,16 +18,16 @@ blood_magic {
 
 plugins {
     # Should the plugin for the mod with modid 'AWWayofTime' be loaded
-    B:AWWayofTime=true
+    B:AWWayofTime=false
 
     # Should the plugin for the mod with modid 'ExtraUtilities' be loaded
     B:ExtraUtilities=true
 
     # Should the plugin for the mod with modid 'Forestry' be loaded
-    B:Forestry=true
+    B:Forestry=false
 
     # Should the plugin for the mod with modid 'Mekanism' be loaded
-    B:Mekanism=true
+    B:Mekanism=false
 
     # Should the plugin for the mod with modid 'Railcraft' be loaded
     B:Railcraft=true
