--- a/IndustriaArcanumModpack/config/microblocks.cfg
+++ b/IndustriaArcanumModpack/config/microblocks.cfg
@@ -56,4 +56,49 @@
 "info.jbcs.minecraft.chisel.BlockMarble":0-15
 "info.jbcs.minecraft.chisel.BlockMarbleIce":1-15
 "info.jbcs.minecraft.chisel.BlockPoweredMarble":1-15
- 
+
+"chisel:acacia_planks":1,2,6,8,9,10,11,13
+"chisel:birch_planks":1-15
+"chisel:bookshelf":1-8
+"chisel:carpet_block":0-15
+"chisel:cloud"
+"chisel:cobblestone":1-15
+"chisel:concrete":0-10
+"chisel:dark_oak_planks":1,2,6,8,9,10,11,13
+"chisel:diamond_block":1-12
+"chisel:dirt":0-12
+"chisel:emerald_block":1-11
+"chisel:factoryblock":0-15
+"chisel:fantasyblock":0-15
+"chisel:glass":1-15
+"chisel:glowstone":1-15
+"chisel:gold_block":1-14
+"chisel:holystone":0-13
+"chisel:ice":1-15
+"chisel:ice_pillar":0-15
+"chisel:iron_block":1-15
+"chisel:jungle_planks":1-15
+"chisel:laboratoryblock":0-15
+"chisel:lapis_block":1-8
+"chisel:leaves":6-12
+"chisel:limestone":0-15
+"chisel:marble":0-15
+"chisel:marble_pillar":0-15
+"chisel:mossy_cobblestone":1-15
+"chisel:mossy_templeblock":0-15
+"chisel:nether_brick":2-15
+"chisel:netherrack":1-14
+"chisel:oak_planks":1-15
+"chisel:obsidian":1-15
+"chisel:redstone_block":1-15
+"chisel:sandstone":3-15
+"chisel:sandstone_scribbles":0-15
+"chisel:spruce_planks":1-15
+"chisel:stained_glass_brown":0-15
+"chisel:stained_glass_lightgray":0-15
+"chisel:stained_glass_white":0-15
+"chisel:stained_glass_yellow":0-15
+"chisel:stonebricksmooth":4-15
+"chisel:templeblock":0-15
+"chisel:tyrian":0-15
+"chisel:woolen_clay":0-15
