First Pass on Ore Gen

--- a/IndustriaArcanumModpack/config/FlaxbeardsSteamPower.cfg
+++ b/IndustriaArcanumModpack/config/FlaxbeardsSteamPower.cfg
@@ -159,7 +159,7 @@ weapons {
     B:"Generate End Zinc"=false
     B:"Generate Nether Copper"=false
     B:"Generate Nether Zinc"=false
-    B:"Generate Overworld Copper"=true
+    B:"Generate Overworld Copper"=false
     B:"Generate Overworld Zinc"=true
 }
 
