--- a/IndustriaArcanumModpack/config/cofh/CoFHCore.cfg
+++ b/IndustriaArcanumModpack/config/cofh/CoFHCore.cfg
@@ -13,7 +13,7 @@ general {
     B:EnableGenericDeathMessage=true
 
     # Enable this to be informed of non-critical updates. You will still receive critical update notifications.
-    B:EnableUpdateNotifications=true
+    B:EnableUpdateNotifications=false
 }
 
 
@@ -52,7 +52,7 @@ version {
 
 world {
     # This will flatten the bedrock layer.
-    B:FlatBedrock=false
+    B:FlatBedrock=true
 
     # The number of layers of bedrock to flatten to. (Max: 8)
     I:FlatBedrockLayers=1
