--- a/IndustriaArcanumModpack/config/sc2/generation.cfg
+++ b/IndustriaArcanumModpack/config/sc2/generation.cfg
@@ -20,17 +20,17 @@ general {
     B:"All End Generation"=true
     B:"All Nether Generation"=true
     B:"All Overworld Generation"=true
-    B:"Aluminum Ore"=true
+    B:"Aluminum Ore"=false
     B:"Brass Tree Gen"=true
     B:"Brimstone Ore"=true
-    B:"Copper Ore"=true
+    B:"Copper Ore"=false
     B:"Etherium Crystal (End)"=true
     B:"Etherium Crystal (Nether)"=true
     B:"Phosphate Ore"=true
     B:Slate=true
-    B:"Tin Ore"=true
+    B:"Tin Ore"=false
     B:"Uranium Ore"=true
-    B:"Zinc Ore"=true
+    B:"Zinc Ore"=false
 }
 
 
