--- a/IndustriaArcanumModpack/config/Waila.cfg
+++ b/IndustriaArcanumModpack/config/Waila.cfg
@@ -28,6 +28,7 @@ general {
 ##########################################################################################################
 
 modules {
+    B:ExtraUtilities=true
     B:Railcraft=true
     B:"Railcraft:charge"=true
     B:"Railcraft:energy"=true
@@ -65,6 +66,7 @@ modules {
     B:harvestability.silktouchability.sneakingonly=false
     B:harvestability.toolrequiredonly=true
     B:harvestability.unharvestableonly=false
+    B:harvestcraft=true
     B:magicalcrops=true
     B:"magicalcrops:showHover"=true
     B:railcraft.fluidamount=true
@@ -136,6 +138,7 @@ modules {
 ##########################################################################################################
 
 server_forcing {
+    B:ExtraUtilities=false
     B:Railcraft=false
     B:"Railcraft:charge"=false
     B:"Railcraft:energy"=false
@@ -173,6 +176,7 @@ server_forcing {
     B:harvestability.silktouchability.sneakingonly=false
     B:harvestability.toolrequiredonly=false
     B:harvestability.unharvestableonly=false
+    B:harvestcraft=false
     B:magicalcrops=false
     B:"magicalcrops:showHover"=false
     B:railcraft.fluidamount=false
