--- a/IndustriaArcanumModpack/config/Botania.cfg
+++ b/IndustriaArcanumModpack/config/Botania.cfg
@@ -112,6 +112,12 @@ shedding {
     I:"Botania.botania:pixie.metadata"=0
     I:"Botania.botania:pixie.rate"=-1
 
+    # Configuration of Shedding for Butterfly
+    S:Butterfly.item=
+    I:Butterfly.lexiconDisplaySize=40
+    I:Butterfly.metadata=0
+    I:Butterfly.rate=-1
+
     # Configuration of Shedding for CaveSpider
     S:CaveSpider.item=
     I:CaveSpider.lexiconDisplaySize=40
@@ -154,6 +160,54 @@ shedding {
     I:EntityHorse.metadata=0
     I:EntityHorse.rate=-1
 
+    # Configuration of Shedding for EtymologistVillager
+    S:EtymologistVillager.item=
+    I:EtymologistVillager.lexiconDisplaySize=40
+    I:EtymologistVillager.metadata=0
+    I:EtymologistVillager.rate=-1
+
+    # Configuration of Shedding for GSSkeletonCat
+    S:GSSkeletonCat.item=
+    I:GSSkeletonCat.lexiconDisplaySize=40
+    I:GSSkeletonCat.metadata=0
+    I:GSSkeletonCat.rate=-1
+
+    # Configuration of Shedding for GSSkeletonDog
+    S:GSSkeletonDog.item=
+    I:GSSkeletonDog.lexiconDisplaySize=40
+    I:GSSkeletonDog.metadata=0
+    I:GSSkeletonDog.rate=-1
+
+    # Configuration of Shedding for GSSkullCrawler
+    S:GSSkullCrawler.item=
+    I:GSSkullCrawler.lexiconDisplaySize=40
+    I:GSSkullCrawler.metadata=0
+    I:GSSkullCrawler.rate=-1
+
+    # Configuration of Shedding for GSWitherSkullCrawler
+    S:GSWitherSkullCrawler.item=
+    I:GSWitherSkullCrawler.lexiconDisplaySize=40
+    I:GSWitherSkullCrawler.metadata=0
+    I:GSWitherSkullCrawler.rate=-1
+
+    # Configuration of Shedding for GSZombieCat
+    S:GSZombieCat.item=
+    I:GSZombieCat.lexiconDisplaySize=40
+    I:GSZombieCat.metadata=0
+    I:GSZombieCat.rate=-1
+
+    # Configuration of Shedding for GSZombieDog
+    S:GSZombieDog.item=
+    I:GSZombieDog.lexiconDisplaySize=40
+    I:GSZombieDog.metadata=0
+    I:GSZombieDog.rate=-1
+
+    # Configuration of Shedding for GSZombieSkullCrawler
+    S:GSZombieSkullCrawler.item=
+    I:GSZombieSkullCrawler.lexiconDisplaySize=40
+    I:GSZombieSkullCrawler.metadata=0
+    I:GSZombieSkullCrawler.rate=-1
+
     # Configuration of Shedding for Ghast
     S:Ghast.item=minecraft:ghast_tear
     I:Ghast.lexiconDisplaySize=30
@@ -165,110 +219,74 @@ shedding {
     I:Giant.lexiconDisplaySize=40
     I:Giant.metadata=0
     I:Giant.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.AngryEnderman
     S:HardcoreEnderExpansion.AngryEnderman.item=
     I:HardcoreEnderExpansion.AngryEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.AngryEnderman.metadata=0
     I:HardcoreEnderExpansion.AngryEnderman.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.BabyEnderman
     S:HardcoreEnderExpansion.BabyEnderman.item=
     I:HardcoreEnderExpansion.BabyEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.BabyEnderman.metadata=0
     I:HardcoreEnderExpansion.BabyEnderman.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.CorporealMirage
     S:HardcoreEnderExpansion.CorporealMirage.item=
     I:HardcoreEnderExpansion.CorporealMirage.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.CorporealMirage.metadata=0
     I:HardcoreEnderExpansion.CorporealMirage.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.Dragon
     S:HardcoreEnderExpansion.Dragon.item=
     I:HardcoreEnderExpansion.Dragon.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.Dragon.metadata=0
     I:HardcoreEnderExpansion.Dragon.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.EnderDemon
     S:HardcoreEnderExpansion.EnderDemon.item=
     I:HardcoreEnderExpansion.EnderDemon.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.EnderDemon.metadata=0
     I:HardcoreEnderExpansion.EnderDemon.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.EnderEye
     S:HardcoreEnderExpansion.EnderEye.item=
     I:HardcoreEnderExpansion.EnderEye.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.EnderEye.metadata=0
     I:HardcoreEnderExpansion.EnderEye.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.EnderGuardian
     S:HardcoreEnderExpansion.EnderGuardian.item=
     I:HardcoreEnderExpansion.EnderGuardian.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.EnderGuardian.metadata=0
     I:HardcoreEnderExpansion.EnderGuardian.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.Endermage
     S:HardcoreEnderExpansion.Endermage.item=
     I:HardcoreEnderExpansion.Endermage.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.Endermage.metadata=0
     I:HardcoreEnderExpansion.Endermage.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.FireFiend
     S:HardcoreEnderExpansion.FireFiend.item=
     I:HardcoreEnderExpansion.FireFiend.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.FireFiend.metadata=0
     I:HardcoreEnderExpansion.FireFiend.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.FireGolem
     S:HardcoreEnderExpansion.FireGolem.item=
     I:HardcoreEnderExpansion.FireGolem.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.FireGolem.metadata=0
     I:HardcoreEnderExpansion.FireGolem.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.ForestGhost
     S:HardcoreEnderExpansion.ForestGhost.item=
     I:HardcoreEnderExpansion.ForestGhost.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.ForestGhost.metadata=0
     I:HardcoreEnderExpansion.ForestGhost.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.HauntedMiner
     S:HardcoreEnderExpansion.HauntedMiner.item=
     I:HardcoreEnderExpansion.HauntedMiner.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.HauntedMiner.metadata=0
     I:HardcoreEnderExpansion.HauntedMiner.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.HomelandEnderman
     S:HardcoreEnderExpansion.HomelandEnderman.item=
     I:HardcoreEnderExpansion.HomelandEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.HomelandEnderman.metadata=0
     I:HardcoreEnderExpansion.HomelandEnderman.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.InfestedBat
     S:HardcoreEnderExpansion.InfestedBat.item=
     I:HardcoreEnderExpansion.InfestedBat.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.InfestedBat.metadata=0
     I:HardcoreEnderExpansion.InfestedBat.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.Louse
     S:HardcoreEnderExpansion.Louse.item=
     I:HardcoreEnderExpansion.Louse.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.Louse.metadata=0
     I:HardcoreEnderExpansion.Louse.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.ParalyzedEnderman
     S:HardcoreEnderExpansion.ParalyzedEnderman.item=
     I:HardcoreEnderExpansion.ParalyzedEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.ParalyzedEnderman.metadata=0
     I:HardcoreEnderExpansion.ParalyzedEnderman.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.ScorchedLens
     S:HardcoreEnderExpansion.ScorchedLens.item=
     I:HardcoreEnderExpansion.ScorchedLens.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.ScorchedLens.metadata=0
     I:HardcoreEnderExpansion.ScorchedLens.rate=-1
-
-    # Configuration of Shedding for HardcoreEnderExpansion.VampireBat
     S:HardcoreEnderExpansion.VampireBat.item=
     I:HardcoreEnderExpansion.VampireBat.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.VampireBat.metadata=0
@@ -315,6 +333,12 @@ shedding {
     I:PigZombie.lexiconDisplaySize=40
     I:PigZombie.metadata=0
     I:PigZombie.rate=-1
+
+    # Configuration of Shedding for RandomThings.spirit
+    S:RandomThings.spirit.item=
+    I:RandomThings.spirit.lexiconDisplaySize=40
+    I:RandomThings.spirit.metadata=0
+    I:RandomThings.spirit.rate=-1
 
     # Configuration of Shedding for Sheep
     S:Sheep.item=
@@ -1119,6 +1143,12 @@ shedding {
     I:menagerie.rat.lexiconDisplaySize=40
     I:menagerie.rat.metadata=0
     I:menagerie.rat.rate=-1
+
+    # Configuration of Shedding for steamcraft2.FleshGolem
+    S:steamcraft2.FleshGolem.item=
+    I:steamcraft2.FleshGolem.lexiconDisplaySize=40
+    I:steamcraft2.FleshGolem.metadata=0
+    I:steamcraft2.FleshGolem.rate=-1
 
     # Configuration of Shedding for witchery.babayaga
     S:witchery.babayaga.item=
