--- a/IndustriaArcanumModpack/config/butterflymania.cfg
+++ b/IndustriaArcanumModpack/config/butterflymania.cfg
@@ -27,6 +27,17 @@ player-71b78099-ad3d-42bd-ae79-7cc51fd51860 {
 }
 
 
+world-3926065714507104488 {
+    I:extinct-115=29
+    I:extinct-134=18
+    I:extinct-148=12
+    I:extinct-154=24
+    I:extinct-156=30
+    I:extinct-43=13
+    I:extinct-88=10
+}
+
+
 world-6793392918840021915 {
     I:extinct-115=17
     I:extinct-134=26
