--- a/IndustriaArcanumModpack/config/Botania.cfg
+++ b/IndustriaArcanumModpack/config/Botania.cfg
@@ -868,6 +868,12 @@ shedding {
     I:TConstruct.EdibleSlime.metadata=0
     I:TConstruct.EdibleSlime.rate=-1
 
+    # Configuration of Shedding for TConstruct.KingSlime
+    S:TConstruct.KingSlime.item=
+    I:TConstruct.KingSlime.lexiconDisplaySize=40
+    I:TConstruct.KingSlime.metadata=0
+    I:TConstruct.KingSlime.rate=-1
+
     # Configuration of Shedding for Thaumcraft.BrainyZombie
     S:Thaumcraft.BrainyZombie.item=
     I:Thaumcraft.BrainyZombie.lexiconDisplaySize=40
@@ -1143,8 +1149,6 @@ shedding {
     I:menagerie.rat.lexiconDisplaySize=40
     I:menagerie.rat.metadata=0
     I:menagerie.rat.rate=-1
-
-    # Configuration of Shedding for steamcraft2.FleshGolem
     S:steamcraft2.FleshGolem.item=
     I:steamcraft2.FleshGolem.lexiconDisplaySize=40
     I:steamcraft2.FleshGolem.metadata=0
