--- a/IndustriaArcanumModpack/config/aobd.cfg
+++ b/IndustriaArcanumModpack/config/aobd.cfg
@@ -161,6 +161,28 @@ Recipes {
 }
 
 
+Shadow {
+    B:"Disable All"=false
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    S:colour=0x373737
+    D:energy=1.0
+    S:extra=Shadow
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+}
+
+
 Temporal {
     B:"Disable All"=false
     B:EnderIO=true
