--- a/IndustriaArcanumModpack/config/TinkersModules.cfg
+++ b/IndustriaArcanumModpack/config/TinkersModules.cfg
@@ -1,10 +1,7 @@
 # Configuration file
 
 "modules: disabling these will disable a chunk of the mod" {
-    # Tinkers Construct compatibility for Thaumcraft
     B:"Tinkers Thaumcraft Compatibility"=true
-
-    # Tinkers Construct compatibility for Waila
     B:"Tinkers Waila Compatibility"=true
 
     # Modifyable armors, such as the traveller's gear.
@@ -12,6 +9,9 @@
 
     # Mechanical machinations and steampunk inspired shenanigans.
     B:"Tinkers' Mechworks"=true
+
+    # The main core of the mod! All of the tools, the tables, and the patterns are here.
+    B:"Tinkers' Weaponry"=true
 }
 
 
