--- a/IndustriaArcanumModpack/config/butterflymania.cfg
+++ b/IndustriaArcanumModpack/config/butterflymania.cfg
@@ -24,6 +24,40 @@ entitynames {
 
 player-71b78099-ad3d-42bd-ae79-7cc51fd51860 {
     I:catch-10=1
+    I:catch-49=1
+}
+
+
+world--1765323728175441893 {
+    I:extinct-115=28
+    I:extinct-134=14
+    I:extinct-148=16
+    I:extinct-154=21
+    I:extinct-156=22
+    I:extinct-43=14
+    I:extinct-88=21
+}
+
+
+world--2310195625885739622 {
+    I:extinct-115=19
+    I:extinct-134=24
+    I:extinct-148=30
+    I:extinct-154=17
+    I:extinct-156=21
+    I:extinct-43=14
+    I:extinct-88=14
+}
+
+
+world--5390354031939388416 {
+    I:extinct-115=28
+    I:extinct-134=28
+    I:extinct-148=28
+    I:extinct-154=28
+    I:extinct-156=29
+    I:extinct-43=28
+    I:extinct-88=17
 }
 
 
