--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -892,11 +892,41 @@ shedding {
     I:Thaumcraft.CultistKnight.metadata=0
     I:Thaumcraft.CultistKnight.rate=-1
 
+    # Configuration of Shedding for Thaumcraft.CultistLeader
+    S:Thaumcraft.CultistLeader.item=
+    I:Thaumcraft.CultistLeader.lexiconDisplaySize=40
+    I:Thaumcraft.CultistLeader.metadata=0
+    I:Thaumcraft.CultistLeader.rate=-1
+
+    # Configuration of Shedding for Thaumcraft.CultistPortal
+    S:Thaumcraft.CultistPortal.item=
+    I:Thaumcraft.CultistPortal.lexiconDisplaySize=40
+    I:Thaumcraft.CultistPortal.metadata=0
+    I:Thaumcraft.CultistPortal.rate=-1
+
+    # Configuration of Shedding for Thaumcraft.EldritchCrab
+    S:Thaumcraft.EldritchCrab.item=
+    I:Thaumcraft.EldritchCrab.lexiconDisplaySize=40
+    I:Thaumcraft.EldritchCrab.metadata=0
+    I:Thaumcraft.EldritchCrab.rate=-1
+
+    # Configuration of Shedding for Thaumcraft.EldritchGolem
+    S:Thaumcraft.EldritchGolem.item=
+    I:Thaumcraft.EldritchGolem.lexiconDisplaySize=40
+    I:Thaumcraft.EldritchGolem.metadata=0
+    I:Thaumcraft.EldritchGolem.rate=-1
+
     # Configuration of Shedding for Thaumcraft.EldritchGuardian
     S:Thaumcraft.EldritchGuardian.item=
     I:Thaumcraft.EldritchGuardian.lexiconDisplaySize=40
     I:Thaumcraft.EldritchGuardian.metadata=0
     I:Thaumcraft.EldritchGuardian.rate=-1
+
+    # Configuration of Shedding for Thaumcraft.EldritchWarden
+    S:Thaumcraft.EldritchWarden.item=
+    I:Thaumcraft.EldritchWarden.lexiconDisplaySize=40
+    I:Thaumcraft.EldritchWarden.metadata=0
+    I:Thaumcraft.EldritchWarden.rate=-1
 
     # Configuration of Shedding for Thaumcraft.Firebat
     S:Thaumcraft.Firebat.item=
@@ -915,6 +945,12 @@ shedding {
     I:Thaumcraft.Golem.lexiconDisplaySize=40
     I:Thaumcraft.Golem.metadata=0
     I:Thaumcraft.Golem.rate=-1
+
+    # Configuration of Shedding for Thaumcraft.InhabitedZombie
+    S:Thaumcraft.InhabitedZombie.item=
+    I:Thaumcraft.InhabitedZombie.lexiconDisplaySize=40
+    I:Thaumcraft.InhabitedZombie.metadata=0
+    I:Thaumcraft.InhabitedZombie.rate=-1
 
     # Configuration of Shedding for Thaumcraft.MindSpider
     S:Thaumcraft.MindSpider.item=
@@ -1096,6 +1132,24 @@ shedding {
     I:enderzoo.WitherWitch.metadata=0
     I:enderzoo.WitherWitch.rate=-1
 
+    # Configuration of Shedding for mca.EntityPlayerChild
+    S:mca.EntityPlayerChild.item=
+    I:mca.EntityPlayerChild.lexiconDisplaySize=40
+    I:mca.EntityPlayerChild.metadata=0
+    I:mca.EntityPlayerChild.rate=-1
+
+    # Configuration of Shedding for mca.EntityVillagerAdult
+    S:mca.EntityVillagerAdult.item=
+    I:mca.EntityVillagerAdult.lexiconDisplaySize=40
+    I:mca.EntityVillagerAdult.metadata=0
+    I:mca.EntityVillagerAdult.rate=-1
+
+    # Configuration of Shedding for mca.EntityVillagerChild
+    S:mca.EntityVillagerChild.item=
+    I:mca.EntityVillagerChild.lexiconDisplaySize=40
+    I:mca.EntityVillagerChild.metadata=0
+    I:mca.EntityVillagerChild.rate=-1
+
     # Configuration of Shedding for menagerie.ant
     S:menagerie.ant.item=
     I:menagerie.ant.lexiconDisplaySize=40
@@ -1153,6 +1207,12 @@ shedding {
     I:steamcraft2.FleshGolem.lexiconDisplaySize=40
     I:steamcraft2.FleshGolem.metadata=0
     I:steamcraft2.FleshGolem.rate=-1
+
+    # Configuration of Shedding for testdummy.Dummy
+    S:testdummy.Dummy.item=
+    I:testdummy.Dummy.lexiconDisplaySize=40
+    I:testdummy.Dummy.metadata=0
+    I:testdummy.Dummy.rate=-1
 
     # Configuration of Shedding for witchery.babayaga
     S:witchery.babayaga.item=
@@ -1274,11 +1334,23 @@ shedding {
     I:witchery.imp.metadata=0
     I:witchery.imp.rate=-1
 
+    # Configuration of Shedding for witchery.leonard
+    S:witchery.leonard.item=
+    I:witchery.leonard.lexiconDisplaySize=40
+    I:witchery.leonard.metadata=0
+    I:witchery.leonard.rate=-1
+
     # Configuration of Shedding for witchery.lordoftorment
     S:witchery.lordoftorment.item=
     I:witchery.lordoftorment.lexiconDisplaySize=40
     I:witchery.lordoftorment.metadata=0
     I:witchery.lordoftorment.rate=-1
+
+    # Configuration of Shedding for witchery.lostsoul
+    S:witchery.lostsoul.item=
+    I:witchery.lostsoul.lexiconDisplaySize=40
+    I:witchery.lostsoul.metadata=0
+    I:witchery.lostsoul.rate=-1
 
     # Configuration of Shedding for witchery.louse
     S:witchery.louse.item=
