--- a/config/TinkersModules.cfg
+++ b/config/TinkersModules.cfg
@@ -10,6 +10,9 @@
     # Mechanical machinations and steampunk inspired shenanigans.
     B:"Tinkers' Mechworks"=true
 
+    # Liquid metals, casting, and the multiblock structure.
+    B:"Tinkers' Smeltery"=true
+
     # The main core of the mod! All of the tools, the tables, and the patterns are here.
     B:"Tinkers' Weaponry"=true
 }
