--- a/config/butterflymania.cfg
+++ b/config/butterflymania.cfg
@@ -50,6 +50,17 @@ world--2310195625885739622 {
 }
 
 
+world--3373022796338570251 {
+    I:extinct-115=12
+    I:extinct-134=26
+    I:extinct-148=17
+    I:extinct-154=23
+    I:extinct-156=19
+    I:extinct-43=10
+    I:extinct-88=10
+}
+
+
 world--5390354031939388416 {
     I:extinct-115=28
     I:extinct-134=28
