--- a/config/witchery.cfg
+++ b/config/witchery.cfg
@@ -33,9 +33,15 @@ general {
     B:GenerateShacks=true
     B:GenerateWickerMen=true
     B:GenerateWitchHuts=true
+    I:HobgoblinGodSpawnChance=10
     I:HobgoblinSpawnChance=2
     I:HobgoblinSpawnWeight=4
+    S:MutandisAdditionalBlocks <
+        witchery:glintweed,0
+        tallgrass,2
+     >
     I:PercentageOfPlayersSleepingForBuff=100
+    I:PotionStartID=32
     B:Render3dGlintEffect=true
     B:RenderHuntsmanGlintEffect=true
     B:RespectOtherDeathChestMods=true
@@ -50,6 +56,53 @@ general {
     I:TormentDimensionID=-38
     I:WorldGenFrequency=12
     B:WorldGenInTwilightForest=true
+}
+
+
+potions {
+    I:"witchery:potion.absorbmagic"=62
+    I:"witchery:potion.allergydark"=46
+    I:"witchery:potion.allergysun"=38
+    I:"witchery:potion.attractprojectiles"=66
+    I:"witchery:potion.brewingexpertise"=43
+    I:"witchery:potion.chilled"=39
+    I:"witchery:potion.colorful"=56
+    I:"witchery:potion.diseased"=71
+    I:"witchery:potion.doublejump"=44
+    I:"witchery:potion.enderinhibition"=57
+    I:"witchery:potion.enslaved"=60
+    I:"witchery:potion.featherfall"=45
+    I:"witchery:potion.feelnopain"=69
+    I:"witchery:potion.floating"=41
+    I:"witchery:potion.fortune"=72
+    I:"witchery:potion.gasmask"=70
+    I:"witchery:potion.grotesque"=36
+    I:"witchery:potion.hellishaura"=42
+    I:"witchery:potion.illfitting"=58
+    I:"witchery:potion.insane"=48
+    I:"witchery:potion.keepeffects"=74
+    I:"witchery:potion.keepinventory"=49
+    I:"witchery:potion.love"=37
+    I:"witchery:potion.mortalcoil"=61
+    I:"witchery:potion.overheating"=51
+    I:"witchery:potion.paralysed"=32
+    I:"witchery:potion.poisonweapons"=63
+    I:"witchery:potion.queasy"=53
+    I:"witchery:potion.reflectdamage"=65
+    I:"witchery:potion.reflectprojectiles"=64
+    I:"witchery:potion.reincarnate"=47
+    I:"witchery:potion.repellattacker"=67
+    I:"witchery:potion.resizing"=55
+    I:"witchery:potion.sinking"=50
+    I:"witchery:potion.snowtrail"=40
+    I:"witchery:potion.spiked"=34
+    I:"witchery:potion.sprouting"=35
+    I:"witchery:potion.stoutbelly"=68
+    I:"witchery:potion.swimming"=54
+    I:"witchery:potion.volatility"=59
+    I:"witchery:potion.wakingnightmare"=52
+    I:"witchery:potion.worship"=73
+    I:"witchery:potion.wrappedinvine"=33
 }
 
 
