--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -75,6 +75,7 @@ modules {
     B:tcon.searedtank=true
     B:tcon.smeltery=true
     B:tcon.table=true
+    B:thaumcraft.aspects=true
     B:thermalexpansion.energyhandler=true
     B:thermalexpansion.owner=true
     B:vanilla.comparator=true
@@ -185,6 +186,7 @@ server_forcing {
     B:tcon.searedtank=false
     B:tcon.smeltery=false
     B:tcon.table=false
+    B:thaumcraft.aspects=false
     B:thermalexpansion.energyhandler=false
     B:thermalexpansion.owner=false
     B:vanilla.comparator=false
