--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -18,7 +18,7 @@ inventory
 {
 	cheatmode=0
 	gamemodes=creative, creative+, adventure
-	hidden=true
+	hidden=false
 	itemIDs=1
 	itemsort=nei.itemsort.minecraft,nei.itemsort.mod,nei.itemsort.id,nei.itemsort.default,nei.itemsort.damage,nei.itemsort.name
 	layoutstyle=0
