Made Magical Crops tougher and removed food seeds hopefully - Closes #31

--- a/config/magicalcrops.cfg
+++ b/config/magicalcrops.cfg
@@ -10,13 +10,13 @@
 
 general {
     I:"Amount of experience that experience drops give, default 40"=40
-    B:"Chance of weak essence dropping from magical crops"=true
-    I:"Disable or enable the potion addon, 1 = Enable(Default), 0 = Disable"=1
+    B:"Chance of weak essence dropping from magical crops"=false
+    I:"Disable or enable the potion addon, 1 = Enable(Default), 0 = Disable"=0
     B:"Easy Magic fertilizer recipe (bonemeal & nature essence)"=false
     I:"Edit the amount of seeds you get when crafting, Default 1, Max 64"=1
-    B:"Essence armor gives creative flight (if set to false tier 4/Mark 4 armor is uncraftable)"=true
+    B:"Essence armor gives creative flight (if set to false tier 4/Mark 4 armor is uncraftable)"=false
     B:"Magical crops display particle effects"=true
-    B:"You can craft Magic fertilizer"=true
+    B:"You can craft Magic fertilizer"=false
 }
 
 
@@ -86,10 +86,10 @@ general {
 
 "seed options" {
     I:"Chance of getting an Essence seed from tall grass, number from 1 & 10, 1 Very rare(Default), 10 Very common"=1
-    I:"Change number between 1-100 for chance of getting second seed drop, 10 = 10%, 20 = 20%(default) and so on."=20
-    I:"Change to disable or enabled second seed drop, 1 = Enabled (Default), 0 = Disabled"=1
-    B:"Essence seeds drop from tall grass"=true
-    B:"Standard seeds drop from tall grass"=true
+    I:"Change number between 1-100 for chance of getting second seed drop, 10 = 10%, 20 = 20%(default) and so on."=1
+    I:"Change to disable or enabled second seed drop, 1 = Enabled (Default), 0 = Disabled"=0
+    B:"Essence seeds drop from tall grass"=false
+    B:"Standard seeds drop from tall grass"=false
 }
 
 
