--- a/config/HungerOverhaul.cfg
+++ b/config/HungerOverhaul.cfg
@@ -197,7 +197,7 @@ harvestcraft {
     I:chestLootChance=5
 
     # Max stack size for food to be found in chests (addHarvestCraftChestLoot must be true)
-    I:chestLootMaxStackSize=64
+    I:chestLootMaxStackSize=1
 
     # Makes HarvestCraft foods unplantable, meaning seeds are required to plant crops
     B:foodsUnplantable=true
