Removed Iguana Tweaks

--- a/config/IguanaTinkerTweaks/restrictions.cfg
+++ b/config/IguanaTinkerTweaks/restrictions.cfg
@@ -96,7 +96,7 @@ toolparts {
     # Prevents the creation of listed Material-Tool combinations.
     # The format is <materialname>:<partname>
     # materialnames are: Wood, Stone, Iron, Flint, Cactus, Bone, Obsidian, Netherrack, Slime, Paper, Cobalt, Ardite, Manyullyn, Copper, Bronze, Alumite, BlueSlime, Steel, PigIron, Thaumium, String
-    # partnames are: frypan, swordblade, chisel, knifeblade, toughbinding, pickaxe, scythe, mediumguard, crossbowbody, largeplate, axe, largeblade, bowlimb, fullguard, largeguard, crossbowlimb, crossbar, sign, rod, shuriken, shovel, excavator, hammerhead, broadaxe, binding, arrowhead, largerod, 
+    # partnames are: frypan, swordblade, chisel, knifeblade, toughbinding, pickaxe, scythe, mediumguard, crossbowbody, largeplate, axe, largeblade, bowlimb, fullguard, largeguard, crossbowlimb, crossbar, sign, rod, shuriken, shovel, broadaxe, excavator, hammerhead, binding, arrowhead, largerod, 
     #  [default: ]
     S:restricted <
      >
