--- a/config/IguanaTinkerTweaks/Modules.cfg
+++ b/config/IguanaTinkerTweaks/Modules.cfg
@@ -11,7 +11,7 @@
     B:Items=true
 
     # Adds additional MobHeads and control over MobHead drops.
-    B:MobHeads=false
+    B:MobHeads=true
 
     # Makes Saw cut stuff again
     B:MultipartCompat=true
