--- a/config/IguanaTinkerTweaks/main.cfg
+++ b/config/IguanaTinkerTweaks/main.cfg
@@ -223,12 +223,10 @@ toolleveling {
         2
         4
         6
-        8
-        10
      >
 
     # Gives a random bonus every level, if false and levelling is on modifiers are given at levels 2 and 4 (requires 'toolLeveling=true') [default: true]
-    B:RandomBonuses=false
+    B:RandomBonuses=true
 
     # Disables less-useful modifiers on levelups. Like a sword with silktouch, or a pickaxe with beheading. [default: true]
     B:UsefulBonuses=true
@@ -237,7 +235,7 @@ toolleveling {
     B:detailedXpTooltip=true
 
     #  [range: 1 ~ 99, default: 6]
-    I:maxToolLevel=10
+    I:maxToolLevel=6
 
     # Current XP% is shown after the level [default: false]
     B:showMinimalTooltipXP=false
@@ -300,7 +298,7 @@ tweaks {
     B:disableRegularTools=true
 
     # Stone Tools can only be used to create casts, but no tools [default: true]
-    B:disableStoneTools=false
+    B:disableStoneTools=true
 
     # Allows to craft tool parts with a pattern and the material in any crafting grid. [default: false]
     B:easyPartCrafting=false
@@ -327,7 +325,7 @@ tweaks {
     B:moreModifiersForFlux=true
 
     # Removes the random chance of getting flint from gravel [default: true]
-    B:removeFlintDrop=false
+    B:removeFlintDrop=true
 
     # Removes the creation of Obsidian in the Smeltery. This is normally used to prevent the early pre-diamond creation of obsidian tools. [default: true]
     B:removeObsidianAlloy=true
