Removed Brewcraft, FoxLib, Jewelrycraft, and Moarsigns

--- a/config/iChunUtil.cfg
+++ b/config/iChunUtil.cfg
@@ -35,8 +35,8 @@ versioncheck {
 ##########################################################################################################
 
 versionsave {
-    I:dayCheck=1
-    S:lastCheck=
+    I:dayCheck=3
+    S:lastCheck=iChunUtil: 4.1.3
 }
 
 
