--- a/config/D3Core/D3Core.cfg
+++ b/config/D3Core/D3Core.cfg
@@ -10,6 +10,9 @@ d3core {
     # Enable debug mode [default: false]
     B:debug=false
 
+    # No more rain if set to true. [default: false]
+    B:norain=false
+
     # Enable sillyness
     # But seriously, you can disable name changes, drops and block helmets with this setting. [default: true]
     B:sillyness=true
@@ -28,6 +31,26 @@ d3core {
 
         # Disable Enderman griefing completely. [default: false]
         B:disable=false
+
+        # Made Enderman drop there carrying block on death. [default: false]
+        B:dropCarrying=false
+    }
+
+    ##########################################################################################################
+    # tooltips
+    #--------------------------------------------------------------------------------------------------------#
+    # Tooltips
+    ##########################################################################################################
+
+    tooltips {
+        # Example: oreGold [default: true]
+        B:enableOreDictionary=true
+
+        # Example: minecraft:gold_ore [default: true]
+        B:enableStringID=true
+
+        # Example: tile.oreGold [default: true]
+        B:enableUnlocalizedName=true
     }
 
 }
