--- a/config/thaumicinfusion.cfg
+++ b/config/thaumicinfusion.cfg
@@ -565,6 +565,7 @@ blocks {
     B:"Hex Plating"=true
     B:"High Tide Bush"=true
     B:"Hoary Vervain"=true
+    B:"Holiday Cake"=true
     B:Holly=true
     B:Holystone=true
     B:"Honey Spurge"=true
