Industria Arcanum v1.1.5 Alpha
Added Tubes, Simply Jetpacks, and Squidless.
Removed Modular Systems.
Upgraded Thaumcraft and Clockwork Phase.

--- a/config/LostBooks.cfg
+++ b/config/LostBooks.cfg
@@ -11,7 +11,7 @@ general {
     B:adaptiveDrops=true
 
     # If this is true, dusty books will generate as chest loot. Default is true.
-    B:addChestLoot=true
+    B:addChestLoot=false
 
     # The weighted chance that a dropped book will be an adlib book. Default is 1.
     I:adlibBookWeight=1
