--- a/config/dynamicswordskills.cfg
+++ b/config/dynamicswordskills.cfg
@@ -52,9 +52,9 @@ enabledskills {
 
 general {
     B:"Allow vanilla controls to activate skills"=true
-    I:"Default swing speed (anti-left-click-spam): Sets base number of ticks between each left-click (0 to disable)[0-20]"=0
+    I:"Default swing speed (anti-left-click-spam): Sets base number of ticks between each left-click (0 to disable)[0-20]"=1
     B:"Enable auto-targeting of next opponent"=true
-    B:"Enable targeting of players by default (can be toggled in game)"=true
+    B:"Enable targeting of players by default (can be toggled in game)"=false
     I:"Max hits to display in Combo HUD [0-12]"=3
     B:"Require double tap activation"=true
     I:"Weight for skill orbs when added to vanilla chest loot (0 to disable) [0-10]"=1
@@ -63,8 +63,8 @@ general {
     B:"[Combo HUD] Whether the combo hit counter will display by default (may be toggled in game)"=true
     I:"[Parry] Bonus to disarm based on timing: tenths of a percent added per tick remaining on the timer [0-50]"=25
     I:"[Parry] Penalty to disarm chance: percent per Parry level of the opponent, default negates defender's skill bonus so disarm is based entirely on timing [0-20]"=10
-    B:"[Skill Swords] Enable Skill Swords in the Creative Tab (iron only, as examples)"=true
-    B:"[Skill Swords] Enable randomized Skill Swords to appear as loot in various chests"=true
+    B:"[Skill Swords] Enable Skill Swords in the Creative Tab (iron only, as examples)"=false
+    B:"[Skill Swords] Enable randomized Skill Swords to appear as loot in various chests"=false
     I:"[Skill Swords] Skill level provided by the Creative Tab Skill Swords [1-5]"=3
     B:"[Super Spin Attack | Sword Beam] True to require a completely full health bar to use, or false to allow a small amount to be missing per level"=false
 }
