--- a/config/headcrumbs.cfg
+++ b/config/headcrumbs.cfg
@@ -24,7 +24,7 @@ general {
     # The bigger this number the easier it will be to find heads in dungeons.
     # Some heads will be rarer than others.
     # Examples: Diamond is 1, Redstone is 10
-    I:"Player heads loot weight"=3
+    I:"Player heads loot weight"=1
 
     # modId:name. Whatever block is set here will be the block used to make player statues (2 tall and right-click the top one with a player head)
     S:"Statue block material"=minecraft:clay
@@ -36,144 +36,26 @@ general {
 
 heads {
     S:forgeCraft <
-        FireBall1725
         PurpleMentat
-        Calclavia
-        Minalien
-        fuj1n
-        Mithion
-        RWTema
-        WayofFlowingTime
-        TTFTCUTS
-        bspkrs
-        futureamnet
-        azanor
-        chicken_bones
-        Cloudhunter
-        CovertJaguar
-        cpw11
-        dan200
-        Eloraam
-        florastar
-        ohaiiChun
-        KingLemmingCoFH
-        Krapht
-        LexManos
-        TheMattaBase
-        mDiyo
-        Myrathi
-        Morvelaira
-        Pahimar
-        sfPlayer1
-        ProfMobius
-        Rorax
-        Sacheverell
-        sirsengir
-        Soaryn
-        x3n0ph0b3
-        XCompWiz
-        Vswe
-        Vazkii
-        ZeldoKavira
-        neptunepink
-        EddieRuckus
      >
     S:ftb <
-        eyamaz
-        jadedcat
-        slowpoke101
-        progwml6
      >
     S:mindCrack <
-        adlingtont
-        AnderZEL
-        Arkas
-        Aureylian
-        AvidyaZEN
-        BdoubleO100
-        BlameTC
-        Coestar
-        Docm77
-        Etho
-        generikb
-        Guude
-        jsano19
-        kurtmac
-        mcgamer
-        Mhykol
-        Millbee
-        Nebris
-        Pakratt0013
-        paulsoaresjr
-        PauseUnpause
-        Pyro_0
-        SethBling
-        thejims
-        sevadus
-        Vechs_
-        VintageBeef
-        W92Baj
-        Zisteau
      >
     S:modders <
-        Emasher
-        joshiejack
-        Reika_Kalseki
-        MatrexsVigil
-        ganymedes01
-        Pokefenn
-        chylex
-        vadis365
-        CrazyPants
-        Kihira
-        Country_Gamer
-        jakimfett
-        mats000
-        kris545545
-        TheCricket26
      >
     S:mojang <
-        Notch
-        jeb_
-        C418
-        Dinnerbone
-        Grumm
-        Searge_DP
-        EvilSeph
-        TheMogMiner
      >
     S:others <
-        vasili02
-        Jeb_Jeb
-        KingPurpleRaptor
-        DylanGK
+		saphrym
+		itanshi
+		Shank3001
+		ShaunMurphy
+		GlitchMonkeyMC
+		jmgurgeh
+		Barlock_James
      >
     S:youtubers <
-        ChimneySwift
-        FuriousDestroyer
-        SuperGirlyGamer
-        CyaNideEPiC
-        Jarrenitis
-        direwolf20
-        Sjin
-        Xephos
-        LividCoffee
-        Rythian
-        Zoeya
-        TheStrippin
-        inthelittlewood
-        Quetzz
-        Blorph
-        xbony2
-        CaptainSparklez
-        AntVenom
-        CavemanFilms
-        Fosler
-        BevoLJ
-        Sips_
-        Honeydew
-        TobyTurner
-        corjaantje
      >
 }
 
