--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -18,7 +18,7 @@ inventory
 {
 	cheatmode=0
 	gamemodes=creative, creative+, adventure
-	hidden=false
+	hidden=true
 	itemIDs=1
 	itemsort=nei.itemsort.minecraft,nei.itemsort.mod,nei.itemsort.id,nei.itemsort.default,nei.itemsort.damage,nei.itemsort.name
 	layoutstyle=0
@@ -60,9 +60,12 @@ tools
 	dump
 	{
 		biome=0
+		block=0
 		enchantment=1
 		item=0
 		itempanel=0
+		neiintegration_oredict=0
+		neiintegration_recipehandler=0
 		potion=0
 	}
 }
