--- a/config/adventurebackpack.cfg
+++ b/config/adventurebackpack.cfg
@@ -1,8 +1,14 @@
 # Configuration file
 
 general {
+    # Allow the backpacks to execute their special abilities, or be only cosmetic (Doesn't affect lightning transformation) Must be disabled in both Client and Server to work properly [default: true]
+    B:BackpackAbilities=true
+
     # Include a Standard Adventure Backpack in bonus chest? [default: false]
     B:BonusBackpack=false
+
+    # Allow playing the CopterPack sound (Client Only, other players may hear it) [default: true]
+    B:CopterPackSound=true
 
     # Allow generation of Pigman Backpacks in dungeon loot and villager trades [default: false]
     B:PigmanBackpacks=false
