--- a/config/progressiveautomation.cfg
+++ b/config/progressiveautomation.cfg
@@ -8,10 +8,10 @@ blocks {
     B:crafter=true
 
     # Generator Block is enabled (requires restart) [default: true]
-    B:generator=false
+    B:generator=true
 
     # Miner Block is enabled (requires restart) [default: true]
-    B:miner=false
+    B:miner=true
 
     # Planter/Harvester Block is enabled (requires restart) [default: true]
     B:planter=true
